Reduce the chance of timeout of text input state update timer.

InputConnectionImpl waits for text input state updates by observer
methods. However, some IME operations (like deleting '0' character)
don't update the state.
Also this CL stops ArcInputMethodManagerService observing
OnCompositionBoundsChanged() because it's often called before
text input state is updated.

Bug: 900707
Test: Ran on DUT.
Change-Id: Ib4c79ae19f0175d46e9ecf3cf0cac909f02fac3e
Reviewed-on: https://chromium-review.googlesource.com/c/1311313
Reviewed-by: Yusuke Sato <yusukes@chromium.org>
Commit-Queue: Yuichiro Hanada <yhanada@chromium.org>
Cr-Commit-Position: refs/heads/master@{#604489}
Former-commit-id: ddde5a12ea97520b7c9529e5a28b85f64db27a5d